Prometheus-grafana/p-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: grafana-ingress
namespace: monitoring
annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.org/client-max-body-size: "10m"
spec:
  rules:
  - host: grafana.rafiqul.my.id
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port: 
              number: 3000
